# analytics-agent

./: .gitignore  LICENSE  Makefile  README.md  data_exploration.ipynb  pyproject.toml
agent/: executor.py  llm.py  planner.py  reporter.py  run.py
agent/tools/: aggregations.py  compare.py  metrics.py
data/: preprocess_airbnb.py
docs/: metrics.md  schema.md
eval/: questions.yaml  results.csv  run_eval.py
rag/: build_index.py  retriever.py
rag_storage/: chunks.json
